# cago

./: .dockerignore  .gitignore  CLAUDE.md  README.md
frappe-apps/cago/: .gitignore  README.md  license.txt  pyproject.toml
frappe-apps/cago/cago/: customer.py  debt_proof.py  hooks.py  job_role.py  loyalty.py  modules.txt  patches.txt
frappe-apps/cago/cago/api/: ai_config.py  alerts.py  bulk.py  cashbook.py  catalog.py  chatbot.py  chatbot_admin.py  coupon.py  customers.py  debt.py  display.py  integrations.py  inventory.py  kiosk.py  notify.py  owner.py  payment.py  pos.py  prefs.py  purchasing.py  readiness.py  reports.py  sales.py  session.py  shift.py  staff.py  staff_admin.py  stock.py  store.py  storemap.py  supplier.py  support.py  telegram.py  units.py  verify.py  zalo.py
frappe-apps/cago/cago/chatbot/: config.py  context.py  deterministic.py  observability.py  orchestrator.py  prompts.py  retrieval.py  safety.py  schema.py  settings.py  storefacts.py  tools.py
frappe-apps/cago/cago/data/: sample_products.csv
frappe-apps/cago/cago/fixtures/: custom_field.json  role.json
frappe-apps/cago/cago/patches/: assign_default_job_roles.py  grant_capability_roles.py
frappe-apps/cago/cago/setup/: audit.py  backup.py  category_tree.py  company.py  custom_fields.py  diag.py  pos_i18n.py  pos_profile_minimal.py  sample_data.py  seed.py  seed_real_users.py  test_accounts.py
frappe-apps/cago/cago/tests/: test_api.py  test_categories.py  test_chatbot.py  test_coupon.py  test_custom_fields.py  test_debt_proof.py  test_features.py  test_inventory.py  test_privileged.py  (+13 more)
(+397 files in other folders)
